# Toy-Project

./: CNAME  GuestBook.js  README.md  a.txt  index.html  style.css
likelion13/: pyproject.toml
likelion13/accounts/migrations/: 0001_initial.py
likelion13/categories/: admin.py  models.py
likelion13/categories/migrations/: 0001_initial.py
likelion13/config/: settings.py  urls.py
likelion13/posts/: admin.py  models.py  urls.py  views.py
likelion13/posts/migrations/: 0001_initial.py  0002_category_post_category_comment.py  0003_delete_category_alter_post_category.py
likelion13/posts/templates/: index.html
toyproject/: .gitignore  nohup.out  pyproject.toml
toyproject/config/: settings.py  urls.py
toyproject/posts/: models.py  urls.py  views.py
toyproject/posts/migrations/: 0001_initial.py
